Normalize newlines yet again